// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton in harbor dark renders confirmed 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0F1A2B",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "position": "absolute",
          }
        }
        testID="primary-button-check"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={20}
          vbWidth={20}
          width={20}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M4.5 10.5 L8.5 14.5 L15.5 6"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeDasharray",
                  "strokeDashoffset",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4279179819,
                  "type": 0,
                }
              }
              strokeDasharray={
                [
                  17,
                  17,
                ]
              }
              strokeDashoffset={17}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders disabled 1`] = `
<View>
  <View
    accessibilityLabel="Ended"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#2F3F57",
            "borderColor": "#2F3F57",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#2F3F57",
            "borderColor": "#2F3F57",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#A7AEBC",
              },
            ]
          }
        >
          Ended
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders error 1`] = `
<View>
  <View
    accessibilityLabel="Try again"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0F1A2B",
              },
            ]
          }
        >
          Try again
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLiveRegion="polite"
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "fontFamily": "Geist-Medium",
          "fontSize": 12,
          "fontVariant": undefined,
          "letterSpacing": 0.2,
          "lineHeight": 16,
          "textTransform": undefined,
        },
        {
          "color": "#23272A",
        },
        [
          {
            "marginTop": 8,
          },
          {
            "color": "#E08E84",
          },
        ],
      ]
    }
  >
    Couldn't save. Check your connection.
  </Text>
</View>
`;

exports[`PrimaryButton in harbor dark renders going 1`] = `
<View>
  <View
    accessibilityLabel="Going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#172438",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#172438",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginRight": 8,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M4.5 10.5 L8.5 14.5 L15.5 6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4291536219,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#CBA55B",
              },
            ]
          }
        >
          Going
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders idle 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0F1A2B",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders loading 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0F1A2B",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "position": "absolute",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
                "transform": [
                  {
                    "rotate": "40deg",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="primary-button-ring"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeOpacity",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4279179819,
                    "type": 0,
                  }
                }
                strokeOpacity={0.35}
                strokeWidth={1.5}
              />
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4279179819,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "14.529866022852794",
                    "58.119464091411174",
                  ]
                }
                strokeLinecap={1}
                strokeWidth={1.5}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders longRunning 1`] = `
<View>
  <View
    accessibilityLabel="Reading link"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#CBA55B",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
                "transform": [
                  {
                    "rotate": "40deg",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="primary-button-ring"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeOpacity",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4279179819,
                    "type": 0,
                  }
                }
                strokeOpacity={0.35}
                strokeWidth={1.5}
              />
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4279179819,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "14.529866022852794",
                    "58.119464091411174",
                  ]
                }
                strokeLinecap={1}
                strokeWidth={1.5}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 1,
              },
            ]
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            numberOfLines={1}
            style={
              [
                {
                  "fontFamily": "Geist-Medium",
                  "fontSize": 15,
                  "fontVariant": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "textTransform": undefined,
                },
                {
                  "color": "#23272A",
                },
                {
                  "color": "#0F1A2B",
                },
              ]
            }
          >
            Reading link
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 2,
          "marginTop": 8,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#2F3F57",
        },
      ]
    }
    testID="primary-button-progress"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "width": "43.912838963036116%",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "height": 2,
          },
          {
            "backgroundColor": "#CBA55B",
          },
        ]
      }
      style={
        [
          {
            "height": 2,
          },
          {
            "backgroundColor": "#CBA55B",
          },
          {
            "width": "0%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`PrimaryButton in harbor dark renders queued 1`] = `
<View>
  <View
    accessibilityLabel="Going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#172438",
            "borderColor": "#CBA55B",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#172438",
            "borderColor": "#CBA55B",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#D4B476",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginRight": 8,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M4.5 10.5 L8.5 14.5 L15.5 6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4291536219,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#CBA55B",
              },
            ]
          }
        >
          Going
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLiveRegion="polite"
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "fontFamily": "Geist-Medium",
          "fontSize": 12,
          "fontVariant": undefined,
          "letterSpacing": 0.2,
          "lineHeight": 16,
          "textTransform": undefined,
        },
        {
          "color": "#23272A",
        },
        [
          {
            "marginTop": 8,
          },
          {
            "color": "#A7AEBC",
          },
        ],
      ]
    }
  >
    Saved on this phone. Will sync when you're back online.
  </Text>
</View>
`;

exports[`PrimaryButton in marine-layer light renders confirmed 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#F3F4F4",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "position": "absolute",
          }
        }
        testID="primary-button-check"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={20}
          vbWidth={20}
          width={20}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M4.5 10.5 L8.5 14.5 L15.5 6"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeDasharray",
                  "strokeDashoffset",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4294178036,
                  "type": 0,
                }
              }
              strokeDasharray={
                [
                  17,
                  17,
                ]
              }
              strokeDashoffset={17}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders disabled 1`] = `
<View>
  <View
    accessibilityLabel="Ended"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#D5D9DB",
            "borderColor": "#D5D9DB",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#D5D9DB",
            "borderColor": "#D5D9DB",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#5C6469",
              },
            ]
          }
        >
          Ended
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders error 1`] = `
<View>
  <View
    accessibilityLabel="Try again"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#F3F4F4",
              },
            ]
          }
        >
          Try again
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLiveRegion="polite"
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "fontFamily": "Geist-Medium",
          "fontSize": 12,
          "fontVariant": undefined,
          "letterSpacing": 0.2,
          "lineHeight": 16,
          "textTransform": undefined,
        },
        {
          "color": "#23272A",
        },
        [
          {
            "marginTop": 8,
          },
          {
            "color": "#A33A31",
          },
        ],
      ]
    }
  >
    Couldn't save. Check your connection.
  </Text>
</View>
`;

exports[`PrimaryButton in marine-layer light renders going 1`] = `
<View>
  <View
    accessibilityLabel="Going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#F9FAFA",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#F9FAFA",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginRight": 8,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M4.5 10.5 L8.5 14.5 L15.5 6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279118407,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0E2A47",
              },
            ]
          }
        >
          Going
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders idle 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#F3F4F4",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders loading 1`] = `
<View>
  <View
    accessibilityLabel="I'm going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#F3F4F4",
              },
            ]
          }
        >
          I'm going
        </Text>
      </View>
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "position": "absolute",
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
                "transform": [
                  {
                    "rotate": "40deg",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="primary-button-ring"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeOpacity",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4294178036,
                    "type": 0,
                  }
                }
                strokeOpacity={0.35}
                strokeWidth={1.5}
              />
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4294178036,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "14.529866022852794",
                    "58.119464091411174",
                  ]
                }
                strokeLinecap={1}
                strokeWidth={1.5}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders longRunning 1`] = `
<View>
  <View
    accessibilityLabel="Reading link"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": true,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#0E2A47",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
                "transform": [
                  {
                    "rotate": "40deg",
                  },
                ],
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            ]
          }
          testID="primary-button-ring"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            focusable={false}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width={20}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeOpacity",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4294178036,
                    "type": 0,
                  }
                }
                strokeOpacity={0.35}
                strokeWidth={1.5}
              />
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeLinecap",
                  ]
                }
                r={9.25}
                stroke={
                  {
                    "payload": 4294178036,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    "14.529866022852794",
                    "58.119464091411174",
                  ]
                }
                strokeLinecap={1}
                strokeWidth={1.5}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "opacity": 1,
              },
            }
          }
          jestInlineStyle={{}}
          style={
            [
              {
                "opacity": 1,
              },
            ]
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            numberOfLines={1}
            style={
              [
                {
                  "fontFamily": "Geist-Medium",
                  "fontSize": 15,
                  "fontVariant": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "textTransform": undefined,
                },
                {
                  "color": "#23272A",
                },
                {
                  "color": "#F3F4F4",
                },
              ]
            }
          >
            Reading link
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 2,
          "marginTop": 8,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#D5D9DB",
        },
      ]
    }
    testID="primary-button-progress"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "width": "43.912838963036116%",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "height": 2,
          },
          {
            "backgroundColor": "#0E2A47",
          },
        ]
      }
      style={
        [
          {
            "height": 2,
          },
          {
            "backgroundColor": "#0E2A47",
          },
          {
            "width": "0%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`PrimaryButton in marine-layer light renders queued 1`] = `
<View>
  <View
    accessibilityLabel="Going"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="primary-button"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#F9FAFA",
            "borderColor": "#0E2A47",
          },
          {
            "transitionDuration": 200,
            "transitionProperty": [
              "backgroundColor",
              "borderColor",
            ],
            "transitionTimingFunction": "ease-in-out",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 52,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          },
          {
            "backgroundColor": "#F9FAFA",
            "borderColor": "#0E2A47",
          },
          {},
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 0,
            },
          }
        }
        jestInlineStyle={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
          ]
        }
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "borderRadius": 8,
            },
            {
              "backgroundColor": "#0A1D32",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "marginRight": 8,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M4.5 10.5 L8.5 14.5 L15.5 6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279118407,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "opacity": 1,
            },
          }
        }
        jestInlineStyle={{}}
        style={
          [
            {
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Geist-Medium",
                "fontSize": 15,
                "fontVariant": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textTransform": undefined,
              },
              {
                "color": "#23272A",
              },
              {
                "color": "#0E2A47",
              },
            ]
          }
        >
          Going
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLiveRegion="polite"
    maxFontSizeMultiplier={2}
    style={
      [
        {
          "fontFamily": "Geist-Medium",
          "fontSize": 12,
          "fontVariant": undefined,
          "letterSpacing": 0.2,
          "lineHeight": 16,
          "textTransform": undefined,
        },
        {
          "color": "#23272A",
        },
        [
          {
            "marginTop": 8,
          },
          {
            "color": "#5C6469",
          },
        ],
      ]
    }
  >
    Saved on this phone. Will sync when you're back online.
  </Text>
</View>
`;
